--- a/src/assets/css/local.css
+++ b/src/assets/css/local.css
@@ -644,6 +644,9 @@
     z-index: 1;
     /* prevents padding from adding to the width */
     box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    width: 100%;
   }
   #sbsr-684 .cs-button-solid:before {
     content: "";
