--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -731,6 +731,10 @@
             z-index: 1;
             /* prevents padding from adding to the width */
             box-sizing: border-box;
+            display: flex;
+            justify-content: center;
+            width: 100%;
+            
 
             &:before {
                 content: "";
