--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -46,6 +46,16 @@
         {% block head %}{% endblock %}
 
         <title>{{ title }}</title>
+
+         <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-R9Z0FQ89PL"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+          gtag('config', 'G-R9Z0FQ89PL');
+        </script>
+
     </head>
     <body>
         <!--Screen reader skip main nav-->
