--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -39,8 +39,6 @@
 
         <!-- Sitewide Stylesheets and Scripts -->
         <link rel="stylesheet" href="/assets/css/root.css">
-        <link rel="stylesheet" href="/assets/css/dark.css">
-        <script defer src="/assets/js/dark.js"></script>
         <script defer src="/assets/js/nav.js"></script>
 
         {% block head %}{% endblock %}
@@ -55,6 +53,27 @@
           gtag('js', new Date());
           gtag('config', 'G-R9Z0FQ89PL');
         </script>
+
+        <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "{{ client.name }}",
+  "image": "/assets/images/landing.webp",
+  "telephone": "{{ client.phoneFormatted }}",
+  "email": "{{ client.email }}",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "{{ client.address.lineOne }}, {{ client.address.lineTwo }}",
+    "addressLocality": "{{ client.address.city }}",
+    "addressRegion": "{{ client.address.state }}",
+    "postalCode": "{{ client.address.zip }}",
+    "addressCountry": "{{ client.address.country }}"
+  },
+  "url": "{{ client.domain }}"
+}
+</script>
+
 
     </head>
     <body>
