--- a/src/assets/less/home-watch.less
+++ b/src/assets/less/home-watch.less
@@ -455,6 +455,38 @@
             }
         }
     }
+
+    /* Home Watch Services List Styles */
+    #list-1405 {
+        width: 100%;
+        margin: 0 0 (24/16rem) 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: (12/16rem);
+
+        .cs-li {
+            font-size: var(--bodyFontSize);
+            list-style: none;
+            line-height: 1.5em;
+            width: 100%;
+            color: var(--bodyTextColor);
+            display: flex;
+            justify-content: flex-start;
+            /* push icon top the top so if the list item goes to two lines the icon stays at the top */
+            align-items: flex-start;
+            gap: (8/16rem);
+        }
+
+        .cs-icon {
+            width: (24/16rem);
+            height: auto;
+            /* adds extra space between the icon and top of parent so it's more centered */
+            margin-top: 1px;
+            display: block;
+        }
+    }
 }
 
 /* Tablet - 768px */
@@ -511,6 +543,7 @@
         }
     }
 }
+
 
 /*-- -------------------------- -->
 <---          Reviews           -->
