--- a/src/assets/less/contact.less
+++ b/src/assets/less/contact.less
@@ -38,6 +38,10 @@
             margin: 0 0 (28/16rem) 0;
         }
 
+        .hidden {
+            display: none;
+        }
+        
         .cs-form {
             width: 100%;
             max-width: (650/16rem);
