--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -229,6 +229,10 @@
             grid-template-columns: repeat(12, 1fr);
             gap: (12/16rem);
         }
+        
+        .hidden {
+            display: none;
+        }
 
         .cs-label {
             font-size: (16/16rem);
