--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -389,6 +389,25 @@
     }
 }
 
+/* Mobile - 600px and below: center form and prevent overflow */
+@media only screen and (max-width: 37.5rem) {
+    #contact-983 {
+        .cs-container {
+            padding-left: 1rem;
+            padding-right: 1rem;
+            box-sizing: border-box;
+        }
+        .cs-form {
+            width: 100%;
+            box-sizing: border-box;
+        }
+        .cs-label {
+            width: 100%;
+            box-sizing: border-box;
+        }
+    }
+}
+
 /*-- -------------------------- -->
 <---          Contact           -->
 <--- -------------------------- -*/
