--- a/src/assets/css/local.css
+++ b/src/assets/css/local.css
@@ -199,6 +199,7 @@
   #contact-983 .cs-label {
     font-size: 1rem;
     line-height: 1.5em;
+    width: 100%;
     color: #fff;
     display: flex;
     justify-content: flex-start;
@@ -206,7 +207,6 @@
     flex-direction: column;
     gap: 0.5rem;
     grid-column: span 12;
-    padding: 0 1rem;
   }
   #contact-983 .cs-input {
     font-family: inherit;
