--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -362,6 +362,28 @@
 @media only screen and (max-width: 37.5rem) {
   #contact-983 {
     overflow-x: hidden;
+    width: 100%;
+    max-width: 100vw;
+    
+    .cs-container {
+      width: 100%;
+      max-width: 100%;
+      padding-left: 1rem;
+      padding-right: 1rem;
+      box-sizing: border-box;
+    }
+    
+    .cs-form {
+      width: 100%;
+      max-width: 100%;
+      box-sizing: border-box;
+    }
+    
+    .cs-label, .cs-input, .cs-textarea {
+      width: 100%;
+      max-width: 100%;
+      box-sizing: border-box;
+    }
   }
 }
 
